--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ body{
 .footer{
     background-color: #263238;
     color: white;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -421,7 +421,18 @@ form p{
 }
 
 .img-contact{
-    width:250px;
+    width:300px;
     height:350px;
     max-width: max-content;
+}
+
+.touch{
+    margin-left: 5rem;
+    font-weight: 500;
+    font-size: large;
+}
+
+.touch li i{
+    padding: 0.8rem;
+    font-size: larger;
 }
